--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="index.html" class="logo"><img src="./11J-removebg-preview.png" alt="logo" 
+		<a href="index.html" class="logo"><img src="./img/11J-removebg-preview.png" alt="logo" 
 			width="60" 
-		 height="60"> 
+		 height="60">
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
