--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Travigo - Travel for everyone</title>
-	<link rel="stylesheet" type="text/css" href="css/tours.css">
+	<link rel="stylesheet" type="text/css" href="./css/tours.css">
 
 	<link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,9 +18,8 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="index.html" class="logo"><img src="./img/11J-removebg-preview.png" alt="logo" 
-			width="60" 
-		 height="60"> 
+		<img src="./img/11J-removebg-preview.png" alt="enjoy" width="49"
+		height="49">
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
@@ -29,7 +29,6 @@
 			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</header>
-	
 
 	<!--Home section--->
 	<section class="home" id="home">
@@ -104,7 +103,7 @@
 
 			<div class="box">
 				<div class="thum">
-					<img src="img/img2.png">
+					<img src="img/img2.png" alt="travigo">
 					<h3>$499</h3>
 				</div>
 
@@ -125,7 +124,7 @@
 
 			<div class="box">
 				<div class="thum">
-					<img src="img/img3.png">
+					<img src="img/img3.png" alt="holidays">
 					<h3>$499</h3>
 				</div>
 
@@ -155,37 +154,37 @@
 
 		<div class="destination-content">
 			<div class="col-content">
-				<img src="img/img-1.jpg">
+				<img src="img/img-1.jpg" alt="travel">
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
 
 			<div class="col-content">
-				<img src="img/img-2.jpg">
+				<img src="img/img-2.jpg" alt="trip">
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
 
 			<div class="col-content">
-				<img src="img/img-3.jpg">
+				<img src="img/img-3.jpg" alt="nature" >
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
 
 			<div class="col-content">
-				<img src="img/img-4.jpg">
+				<img src="img/img-4.jpg" alt="beach" >
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
 
 			<div class="col-content">
-				<img src="img/img-5.jpg">
+				<img src="img/img-5.jpg" alt="montagnes">
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
 
 			<div class="col-content">
-				<img src="img/img-6.jpg">
+				<img src="img/img-6.jpg" alt="amour">
 				<h5>Machu Picchu</h5>
 				<p>PERU</p>
 			</div>
