--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Travigo - Travel for everyone</title>
-	<link rel="stylesheet" type="text/css" href="css/tours.css">
+	<link rel="stylesheet" type="text/css" href="./css/tours.css">
 
 	<link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,9 +18,8 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="index.html" class="logo"><img src="./img/11J-removebg-preview.png" alt="logo" 
-			width="60" 
-		 height="60">
+		<img src="./img/11J-removebg-preview.png" alt="" width="49"
+		height="49">
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navbar">
